--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="home-container">
     <div class="center-content">
-      <h1>Carta Misteriosa</h1>
+      <h1>- Carta Misteriosa -</h1>
       <input id="carta-texto" type="text">
       <button id="criar-carta">Criar Carta</button>
       <p id="carta-gerada"></p>
